Prevents submenu from getting covered by banner

--- a/styleguide/source/assets/scss/03-organisms/_category-navigation-menu.scss
+++ b/styleguide/source/assets/scss/03-organisms/_category-navigation-menu.scss
@@ -128,13 +128,16 @@
       z-index: 1;
       width: 550px !important;
       max-width: none !important;
-      margin-left: 250px !important;
       overflow: auto;
     }
 
     @include breakpoint($bp-large) {
       width: 980px !important;
       max-width: none !important;
+    }
+
+    &--reposition_margin {
+      margin-top: -50px !important;
     }
   }
 
